2007-01-16  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
	fixed comment.

2007-01-15  Michael Natterer  <mitch@gimp.org>

	* app/base/pixel-region.c (pixel_region_set,get_row): add support
	for non-tiled regions.

	* app/paint/gimpperspectiveclone.[ch]: replace handmade
	transformation code by a call to gimp_transform_region(). Fix
	getting the original pixels for src_pickable != dest_drawable
	(bug #394610). Various small fixes and cleanups.

2007-01-15  Hans Breuer  <hans@breuer.org>

	* plug-ins/makefile.msc : define YY_NO_UNISTD_H to compile
	imagemap with msvc/win32

2007-01-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/jpeg/jpeg-exif.c (jpeg_exif_rotate_query): ellipsize
	the image name displayed below the thumbnail.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* app/actions/file-commands.[ch]
	* app/actions/file-actions.c
	* menus/image-menu.xml.in: removed "file-open-from-image" action
	and simply use "file-open-image" from both File menus. Makes the
	behavior more predictable and removes unneeded complexity.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-close.c (gimp_time_since): round up
	to full hours for time periods over two hours.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/curve_bend.c: cleaned up sanity checks and
	handling of undo groups. Fixes bug #395798.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_csim_lex.c
	* plug-ins/imagemap/imap_ncsa_parse.[ch]
	* plug-ins/imagemap/imap_ncsa_lex.c
	* plug-ins/imagemap/imap_cern_lex.c
	* plug-ins/imagemap/imap_csim_parse.[ch]
	* plug-ins/imagemap/imap_cern_parse.[ch]: regenerated using GNU
	Bison 2.3.  Should fix bug #396261.

2007-01-15  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-close.c: use ngettext() for the
	close dialog. Fixes bug #396513.

2007-01-14  Hans Breuer  <hans@breuer.org>
