@@ -1,3 +1,8 @@
+2007-01-16  Sven Neumann  <sven@gimp.org>
+
+	* app/widgets/gimpprofilechooserdialog.c: include *.icm files in
+	the filter. Add a shortcut to the systemwide color profile folder.
+
 2007-01-16  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/gimpplugin-message.c (gimp_plug_in_handle_proc_run):
